--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>תמלול אודיו לעברית עם GROQ</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+        }
+        textarea {
+            width: 100%;
+            height: 100px;
+            margin: 10px 0;
+        }
+        #response {
+            margin-top: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            min-height: 50px;
+        }
+    </style>
 </head>
 <body>
-    <h1>העלאת קובץ אודיו ותמלול לעברית</h1>
+    <h1>דוגמה בסיסית ל-GROQ</h1>
     <input type="file" id="audioFile" accept="audio/*">
-    <button onclick="uploadAudio()">העלה ותמלל</button>
-    <button onclick="downloadTranscription()" id="downloadBtn" style="display:none;">הורד תמלול כ-TXT</button>
-    <iframe id="responseFrame" srcdoc="" style="width: 100%; height: 300px; border: 1px solid #ccc; margin-top: 20px; overflow-y: scroll;"></iframe>
+    <button onclick="uploadAudio()">שלח שאלה</button>
+    <div id="response"></div>
 
     <script src="script.js"></script>
 </body>
