--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
             margin: 20px auto;
             padding: 20px;
         }
-        textarea {
-            width: 100%;
-            height: 100px;
-            margin: 10px 0;
-        }
         #response {
             margin-top: 20px;
             padding: 10px;
@@ -24,9 +19,9 @@
     </style>
 </head>
 <body>
-    <h1>דוגמה בסיסית ל-GROQ</h1>
+    <h1>העלאת קובץ אודיו ותמלול לעברית</h1>
     <input type="file" id="audioFile" accept="audio/*">
-    <button onclick="uploadAudio()">שלח שאלה</button>
+    <button onclick="uploadAudio()">העלה ותמלל</button>
     <div id="response"></div>
 
     <script src="script.js"></script>
