--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <input type="file" id="audioFile" accept="audio/*">
     <button onclick="uploadAudio()">העלה ותמלל</button>
     <button onclick="downloadTranscription()" id="downloadBtn" style="display:none;">הורד תמלול כ-TXT</button>
-    <iframe id="responseFrame" srcdoc=""></iframe>
+    <div id="response"></div>
 
     <script src="script.js"></script>
 </body>
