--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
         const downloadBtn = document.getElementById('downloadBtn');
 
         if (!audioFile) {
+            responseDiv.innerHTML = '<p>אנא בחר קובץ אודיו.</p>';
+            return;
+        }
+
+        // בדיקה אם הקובץ חורג מ-25 מגה
+        if (audioFile.size > 25 * 1024 * 1024) {
+            responseDiv.innerHTML = '<p>הקובץ חורג מ-25 מגה. אנא בחר קובץ קטן יותר.</p>';
+            return;
+        }
+        const responseDiv = document.getElementById('response');
+        const audioFile = document.getElementById('audioFile').files[0];
+        const downloadBtn = document.getElementById('downloadBtn');
+
+        if (!audioFile) {
             responseDiv.textContent = 'אנא בחר קובץ אודיו.';
             return;
         }
@@ -58,10 +72,10 @@
                 downloadBtn.style.display = 'block';
                 downloadBtn.onclick = () => downloadTranscription(data, audioFile.name);
             } else {
-                responseDiv.textContent = 'שגיאה בבקשה: ' + response.statusText;
+                responseDiv.innerHTML = `<p>שגיאה בבקשה: ${response.statusText}</p>`;
             }
         } catch (error) {
-            responseDiv.textContent = 'אירעה שגיאה: ' + error.message;
+            responseDiv.innerHTML = `<p>אירעה שגיאה: ${error.message}</p>`;
         }
     }
 
@@ -84,6 +98,13 @@
         const m = Math.floor((seconds / 60) % 60).toString().padStart(2, '0');
         return `${m}:${s}.${ms}`;
     }
-    </script>
+            console.log('Upload audio function called.');
+        if (audioFile.size > 25 * 1024 * 1024) {
+            console.log('File exceeds 25MB. Aborting upload.');
+            responseDiv.textContent = 'הקובץ חורג מ-25 מגה. אנא בחר קובץ קטן יותר.';
+            return;
+        }
+
+</script>
 </body>
 </html>
